loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:3: error: ';' expected but ')' found.
}) 
 ^